Closed Bug 1827047 Opened 2 years ago Closed 2 years ago

Codepen demo (https://codepen.io/noeldelgado/pen/NPGmRO) is a lot slower with gpu-canvas compared to skia-canvas

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 --- fixed
firefox114 --- fixed

People

(Reporter: mayankleoboy1, Assigned: jnicol)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: regression)

Attachments

(2 files)

Attached file about:support

Regression range:
2023-04-08T12:14:21.957000: DEBUG : Found commit message:
Bug 1826134 - Avoid interleaving glBufferSubData calls with draw calls in DrawTargetWebgl. r=gfx-reviewers,jgilbert,lsalzman
Differential Revision: https://phabricator.services.mozilla.com/D174685

Keywords: regression
Regressed by: 1826134
Assignee: nobody → jnicol

In bug 1826134 we added a fast-path to WebGLBuffer::BufferSubData used
by DrawTargetWebgl, which under the hood uses glMapBufferRange with
GL_MAP_UNSYNCHRONIZED_BIT. However, this causes performance issues on
ANGLE. This patch therefore avoids the fast-path on ANGLE, falling
back to a simple glBufferSubData instead.

Set release status flags based on info from the regressing bug 1826134

Pushed by jnicol@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/41510d0f9dc5 Avoid unsynchronized BufferSubData fast-path on ANGLE. r=gfx-reviewers,lsalzman
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch

The patch landed in nightly and beta is affected.
:jnicol, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox113 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jnicol)

Comment on attachment 9327939 [details]
Bug 1827047 - Avoid unsynchronized BufferSubData fast-path on ANGLE. r?#gfx-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: Slow performance for windows users who have manually enabled accelerated canvas (off by default)
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Reverts to previous behaviour. Not enabled by default
  • String changes made/needed:
  • Is Android affected?: No
Flags: needinfo?(jnicol)
Attachment #9327939 - Flags: approval-mozilla-beta?

Profile from latest Nightly: https://share.firefox.dev/3MCWJpt
This is fixed. Thanks!

Comment on attachment 9327939 [details]
Bug 1827047 - Avoid unsynchronized BufferSubData fast-path on ANGLE. r?#gfx-reviewers

Approved for 113 beta 3, thanks.

Attachment #9327939 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: