dom/canvas/WebGLBuffer.cpp
@@ -205,7 +205,10 @@ void WebGLBuffer::BufferSubData(GLenum target, uint64_t rawDstByteOffset,
   const ScopedLazyBind lazyBind(gl, target, this);
 
   void* mapping = nullptr;
-  if (unsynchronized && gl->IsSupported(gl::GLFeature::map_buffer_range)) {
+  // Repeated calls to glMapBufferRange is slow on ANGLE, so fall back to the
+  // glBufferSubData path. See bug 1827047.
+  if (unsynchronized && gl->IsSupported(gl::GLFeature::map_buffer_range) &&
+      !gl->IsANGLE()) {
     GLbitfield access = LOCAL_GL_MAP_WRITE_BIT |
                         LOCAL_GL_MAP_UNSYNCHRONIZED_BIT |
                         LOCAL_GL_MAP_INVALIDATE_RANGE_BIT;
